// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic No Default Answers getConfigs 1`] = `
{
  "groups": [
    {
      "custom": undefined,
      "defaultDisabled": false,
      "disabledWhen": undefined,
      "enabledWhen": undefined,
      "groups": [
        {
          "custom": undefined,
          "defaultDisabled": false,
          "disabledWhen": undefined,
          "enabledWhen": undefined,
          "groups": [],
          "id": "subGroup1",
          "questions": [
            {
              "choices": [],
              "custom": {
                "title": "subGroup1Questions",
              },
              "defaultAnswer": undefined,
              "defaultDisabled": false,
              "disabledWhen": undefined,
              "enabledWhen": undefined,
              "id": "subGroup1Question1",
              "type": "any",
              "validators": [
                "notNull",
              ],
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question2Choice1",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question2Choice1",
                  "onSelected": {
                    "enable": [
                      "subGroup1Question3",
                    ],
                  },
                  "value": "subGroup1Question2Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question2Choice2",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question2Choice2",
                  "onSelected": {
                    "disable": [
                      "subGroup1Question4",
                    ],
                  },
                  "value": "subGroup1Question2Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question2Choice3",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question2Choice3",
                  "onSelected": {},
                  "value": "subGroup1Question2Choice3",
                },
              ],
              "custom": {
                "title": "subGroup1Question2",
              },
              "defaultAnswer": undefined,
              "defaultDisabled": false,
              "disabledWhen": undefined,
              "enabledWhen": undefined,
              "id": "subGroup1Question2",
              "type": "choice",
              "validators": [
                "notNullSingle",
              ],
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question3Choice1",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question3Choice1",
                  "onSelected": {},
                  "value": "subGroup1Question3Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question3Choice2",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question3Choice2",
                  "onSelected": {},
                  "value": "subGroup1Question3Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question3Choice3",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question3Choice3",
                  "onSelected": {},
                  "value": "subGroup1Question3Choice3",
                },
              ],
              "custom": {
                "title": "subGroup1Question3",
              },
              "defaultAnswer": undefined,
              "defaultDisabled": true,
              "disabledWhen": undefined,
              "enabledWhen": undefined,
              "id": "subGroup1Question3",
              "type": "choices",
              "validators": [
                "atLeast1",
              ],
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question4Choice1",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question4Choice1",
                  "onSelected": {},
                  "value": "subGroup1Question4Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question4Choice2",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question4Choice2",
                  "onSelected": {},
                  "value": "subGroup1Question4Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question4Choice3",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question4Choice3",
                  "onSelected": {},
                  "value": "subGroup1Question4Choice3",
                },
              ],
              "custom": {
                "title": "subGroup1Question3",
              },
              "defaultAnswer": undefined,
              "defaultDisabled": false,
              "disabledWhen": undefined,
              "enabledWhen": undefined,
              "id": "subGroup1Question4",
              "type": "choices",
              "validators": [
                "atLeast1",
              ],
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question5Choice1",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question5Choice1",
                  "onSelected": {},
                  "value": "subGroup1Question5Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question5Choice2",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question5Choice2",
                  "onSelected": {},
                  "value": "subGroup1Question5Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question5Choice3",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question5Choice3",
                  "onSelected": {},
                  "value": "subGroup1Question5Choice3",
                },
              ],
              "custom": {
                "title": "subGroup1Question5",
              },
              "defaultAnswer": undefined,
              "defaultDisabled": false,
              "disabledWhen": [
                [
                  "subGroup1Question4Choice2",
                ],
                [
                  "subGroup1Question4Choice3",
                ],
              ],
              "enabledWhen": undefined,
              "id": "subGroup1Question5",
              "type": "choices",
              "validators": [
                "atLeast1",
              ],
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question6Choice1",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question6Choice1",
                  "onSelected": {},
                  "value": "subGroup1Question6Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question6Choice2",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question6Choice2",
                  "onSelected": {},
                  "value": "subGroup1Question6Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question6Choice3",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question6Choice3",
                  "onSelected": {},
                  "value": "subGroup1Question6Choice3",
                },
              ],
              "custom": {
                "title": "subGroup1Question6",
              },
              "defaultAnswer": undefined,
              "defaultDisabled": false,
              "disabledWhen": [
                [
                  "subGroup1Question4Choice2",
                  "subGroup1Question4Choice3",
                ],
              ],
              "enabledWhen": undefined,
              "id": "subGroup1Question6",
              "type": "choices",
              "validators": [
                "atLeast1",
              ],
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question7Choice1",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question7Choice1",
                  "onSelected": {},
                  "value": "subGroup1Question7Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question7Choice2",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question7Choice2",
                  "onSelected": {},
                  "value": "subGroup1Question7Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question7Choice3",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question7Choice3",
                  "onSelected": {},
                  "value": "subGroup1Question7Choice3",
                },
              ],
              "custom": {
                "title": "subGroup1Question7",
              },
              "defaultAnswer": undefined,
              "defaultDisabled": true,
              "disabledWhen": undefined,
              "enabledWhen": [
                [
                  "subGroup1Question4Choice2",
                ],
                [
                  "subGroup1Question4Choice3",
                ],
              ],
              "id": "subGroup1Question7",
              "type": "choices",
              "validators": [
                "atLeast1",
              ],
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question8Choice1",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question8Choice1",
                  "onSelected": {},
                  "value": "subGroup1Question8Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question8Choice2",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question8Choice2",
                  "onSelected": {},
                  "value": "subGroup1Question8Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question8Choice3",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question8Choice3",
                  "onSelected": {},
                  "value": "subGroup1Question8Choice3",
                },
              ],
              "custom": {
                "title": "subGroup1Question8",
              },
              "defaultAnswer": undefined,
              "defaultDisabled": true,
              "disabledWhen": undefined,
              "enabledWhen": [
                [
                  "subGroup1Question4Choice2",
                  "subGroup1Question4Choice3",
                ],
              ],
              "id": "subGroup1Question8",
              "type": "choices",
              "validators": [
                "atLeast1",
              ],
            },
          ],
        },
      ],
      "id": "group1",
      "questions": [
        {
          "choices": [],
          "custom": {
            "title": "group1Questions",
          },
          "defaultAnswer": undefined,
          "defaultDisabled": false,
          "disabledWhen": undefined,
          "enabledWhen": undefined,
          "id": "group1Question1",
          "type": "any",
          "validators": [
            "notNull",
          ],
        },
        {
          "choices": [
            {
              "custom": {
                "title": "group1Question2Choice1",
              },
              "defaultDisabled": false,
              "disabledWhen": undefined,
              "enabledWhen": undefined,
              "id": "group1Question2Choice1",
              "onSelected": {},
              "value": "group1Question2Choice1",
            },
            {
              "custom": {
                "title": "group1Question2Choice2",
              },
              "defaultDisabled": false,
              "disabledWhen": undefined,
              "enabledWhen": undefined,
              "id": "group1Question2Choice2",
              "onSelected": {},
              "value": "group1Question2Choice2",
            },
            {
              "custom": {
                "title": "group1Question2Choice3",
              },
              "defaultDisabled": false,
              "disabledWhen": undefined,
              "enabledWhen": undefined,
              "id": "group1Question2Choice3",
              "onSelected": {},
              "value": "group1Question2Choice3",
            },
          ],
          "custom": {
            "title": "group1Question2",
          },
          "defaultAnswer": undefined,
          "defaultDisabled": false,
          "disabledWhen": undefined,
          "enabledWhen": undefined,
          "id": "group1Question2",
          "type": "choice",
          "validators": [
            "notNullSingle",
          ],
        },
        {
          "choices": [
            {
              "custom": {
                "title": "group1Question3Choice1",
              },
              "defaultDisabled": false,
              "disabledWhen": undefined,
              "enabledWhen": undefined,
              "id": "group1Question3Choice1",
              "onSelected": {},
              "value": "group1Question3Choice1",
            },
            {
              "custom": {
                "title": "group1Question3Choice2",
              },
              "defaultDisabled": false,
              "disabledWhen": undefined,
              "enabledWhen": undefined,
              "id": "group1Question3Choice2",
              "onSelected": {},
              "value": "group1Question3Choice2",
            },
            {
              "custom": {
                "title": "group1Question3Choice3",
              },
              "defaultDisabled": false,
              "disabledWhen": undefined,
              "enabledWhen": undefined,
              "id": "group1Question3Choice3",
              "onSelected": {},
              "value": "group1Question3Choice3",
            },
          ],
          "custom": {
            "title": "group1Question3",
          },
          "defaultAnswer": undefined,
          "defaultDisabled": false,
          "disabledWhen": undefined,
          "enabledWhen": undefined,
          "id": "group1Question3",
          "type": "choices",
          "validators": [],
        },
      ],
    },
  ],
  "questions": [],
}
`;

exports[`Basic No Default Answers getCurrentAnswers 1`] = `
{
  "group1Question3": [],
  "subGroup1Question3": [],
  "subGroup1Question4": [],
  "subGroup1Question5": [],
  "subGroup1Question6": [],
  "subGroup1Question7": [],
  "subGroup1Question8": [],
}
`;

exports[`Basic No Default Answers getErrors 1`] = `
{
  "group1Question1": "This field is required.",
  "group1Question2": "Please select an option.",
  "subGroup1Question1": "This field is required.",
  "subGroup1Question2": "Please select an option.",
  "subGroup1Question4": "Please select at least 1 option.",
  "subGroup1Question5": "Please select at least 1 option.",
  "subGroup1Question6": "Please select at least 1 option.",
}
`;

exports[`Basic No Default Answers getRenderInstructions 1`] = `
{
  "groups": [
    {
      "custom": undefined,
      "disabled": false,
      "groups": [
        {
          "custom": undefined,
          "disabled": false,
          "groups": [],
          "id": "subGroup1",
          "questions": [
            {
              "choices": [],
              "currentAnswer": undefined,
              "custom": {
                "title": "subGroup1Questions",
              },
              "disabled": false,
              "error": "This field is required.",
              "id": "subGroup1Question1",
              "type": "any",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question2Choice1",
                  },
                  "disabled": false,
                  "id": "subGroup1Question2Choice1",
                  "value": "subGroup1Question2Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question2Choice2",
                  },
                  "disabled": false,
                  "id": "subGroup1Question2Choice2",
                  "value": "subGroup1Question2Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question2Choice3",
                  },
                  "disabled": false,
                  "id": "subGroup1Question2Choice3",
                  "value": "subGroup1Question2Choice3",
                },
              ],
              "currentAnswer": undefined,
              "custom": {
                "title": "subGroup1Question2",
              },
              "disabled": false,
              "error": "Please select an option.",
              "id": "subGroup1Question2",
              "type": "choice",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question3Choice1",
                  },
                  "disabled": true,
                  "id": "subGroup1Question3Choice1",
                  "value": "subGroup1Question3Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question3Choice2",
                  },
                  "disabled": true,
                  "id": "subGroup1Question3Choice2",
                  "value": "subGroup1Question3Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question3Choice3",
                  },
                  "disabled": true,
                  "id": "subGroup1Question3Choice3",
                  "value": "subGroup1Question3Choice3",
                },
              ],
              "currentAnswer": [],
              "custom": {
                "title": "subGroup1Question3",
              },
              "disabled": true,
              "error": "Please select at least 1 option.",
              "id": "subGroup1Question3",
              "type": "choices",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question4Choice1",
                  },
                  "disabled": false,
                  "id": "subGroup1Question4Choice1",
                  "value": "subGroup1Question4Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question4Choice2",
                  },
                  "disabled": false,
                  "id": "subGroup1Question4Choice2",
                  "value": "subGroup1Question4Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question4Choice3",
                  },
                  "disabled": false,
                  "id": "subGroup1Question4Choice3",
                  "value": "subGroup1Question4Choice3",
                },
              ],
              "currentAnswer": [],
              "custom": {
                "title": "subGroup1Question3",
              },
              "disabled": false,
              "error": "Please select at least 1 option.",
              "id": "subGroup1Question4",
              "type": "choices",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question5Choice1",
                  },
                  "disabled": false,
                  "id": "subGroup1Question5Choice1",
                  "value": "subGroup1Question5Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question5Choice2",
                  },
                  "disabled": false,
                  "id": "subGroup1Question5Choice2",
                  "value": "subGroup1Question5Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question5Choice3",
                  },
                  "disabled": false,
                  "id": "subGroup1Question5Choice3",
                  "value": "subGroup1Question5Choice3",
                },
              ],
              "currentAnswer": [],
              "custom": {
                "title": "subGroup1Question5",
              },
              "disabled": false,
              "error": "Please select at least 1 option.",
              "id": "subGroup1Question5",
              "type": "choices",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question6Choice1",
                  },
                  "disabled": false,
                  "id": "subGroup1Question6Choice1",
                  "value": "subGroup1Question6Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question6Choice2",
                  },
                  "disabled": false,
                  "id": "subGroup1Question6Choice2",
                  "value": "subGroup1Question6Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question6Choice3",
                  },
                  "disabled": false,
                  "id": "subGroup1Question6Choice3",
                  "value": "subGroup1Question6Choice3",
                },
              ],
              "currentAnswer": [],
              "custom": {
                "title": "subGroup1Question6",
              },
              "disabled": false,
              "error": "Please select at least 1 option.",
              "id": "subGroup1Question6",
              "type": "choices",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question7Choice1",
                  },
                  "disabled": true,
                  "id": "subGroup1Question7Choice1",
                  "value": "subGroup1Question7Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question7Choice2",
                  },
                  "disabled": true,
                  "id": "subGroup1Question7Choice2",
                  "value": "subGroup1Question7Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question7Choice3",
                  },
                  "disabled": true,
                  "id": "subGroup1Question7Choice3",
                  "value": "subGroup1Question7Choice3",
                },
              ],
              "currentAnswer": [],
              "custom": {
                "title": "subGroup1Question7",
              },
              "disabled": true,
              "error": "Please select at least 1 option.",
              "id": "subGroup1Question7",
              "type": "choices",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question8Choice1",
                  },
                  "disabled": true,
                  "id": "subGroup1Question8Choice1",
                  "value": "subGroup1Question8Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question8Choice2",
                  },
                  "disabled": true,
                  "id": "subGroup1Question8Choice2",
                  "value": "subGroup1Question8Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question8Choice3",
                  },
                  "disabled": true,
                  "id": "subGroup1Question8Choice3",
                  "value": "subGroup1Question8Choice3",
                },
              ],
              "currentAnswer": [],
              "custom": {
                "title": "subGroup1Question8",
              },
              "disabled": true,
              "error": "Please select at least 1 option.",
              "id": "subGroup1Question8",
              "type": "choices",
              "validatedAnswer": undefined,
              "validating": false,
            },
          ],
          "validating": false,
        },
      ],
      "id": "group1",
      "questions": [
        {
          "choices": [],
          "currentAnswer": undefined,
          "custom": {
            "title": "group1Questions",
          },
          "disabled": false,
          "error": "This field is required.",
          "id": "group1Question1",
          "type": "any",
          "validatedAnswer": undefined,
          "validating": false,
        },
        {
          "choices": [
            {
              "custom": {
                "title": "group1Question2Choice1",
              },
              "disabled": false,
              "id": "group1Question2Choice1",
              "value": "group1Question2Choice1",
            },
            {
              "custom": {
                "title": "group1Question2Choice2",
              },
              "disabled": false,
              "id": "group1Question2Choice2",
              "value": "group1Question2Choice2",
            },
            {
              "custom": {
                "title": "group1Question2Choice3",
              },
              "disabled": false,
              "id": "group1Question2Choice3",
              "value": "group1Question2Choice3",
            },
          ],
          "currentAnswer": undefined,
          "custom": {
            "title": "group1Question2",
          },
          "disabled": false,
          "error": "Please select an option.",
          "id": "group1Question2",
          "type": "choice",
          "validatedAnswer": undefined,
          "validating": false,
        },
        {
          "choices": [
            {
              "custom": {
                "title": "group1Question3Choice1",
              },
              "disabled": false,
              "id": "group1Question3Choice1",
              "value": "group1Question3Choice1",
            },
            {
              "custom": {
                "title": "group1Question3Choice2",
              },
              "disabled": false,
              "id": "group1Question3Choice2",
              "value": "group1Question3Choice2",
            },
            {
              "custom": {
                "title": "group1Question3Choice3",
              },
              "disabled": false,
              "id": "group1Question3Choice3",
              "value": "group1Question3Choice3",
            },
          ],
          "currentAnswer": [],
          "custom": {
            "title": "group1Question3",
          },
          "disabled": false,
          "error": undefined,
          "id": "group1Question3",
          "type": "choices",
          "validatedAnswer": [],
          "validating": false,
        },
      ],
      "validating": false,
    },
  ],
  "questions": [],
  "validating": false,
}
`;

exports[`Basic No Default Answers getValidatedAnswers 1`] = `
{
  "group1Question3": [],
}
`;

exports[`Basic With Default Answers getConfigs 1`] = `
{
  "groups": [
    {
      "custom": undefined,
      "defaultDisabled": false,
      "disabledWhen": undefined,
      "enabledWhen": undefined,
      "groups": [
        {
          "custom": undefined,
          "defaultDisabled": false,
          "disabledWhen": undefined,
          "enabledWhen": undefined,
          "groups": [],
          "id": "subGroup1",
          "questions": [
            {
              "choices": [],
              "custom": {
                "title": "subGroup1Questions",
              },
              "defaultAnswer": "subGroup1Question1Answer",
              "defaultDisabled": false,
              "disabledWhen": undefined,
              "enabledWhen": undefined,
              "id": "subGroup1Question1",
              "type": "any",
              "validators": [
                "notNull",
              ],
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question2Choice1",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question2Choice1",
                  "onSelected": {
                    "enable": [
                      "subGroup1Question3",
                    ],
                  },
                  "value": "subGroup1Question2Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question2Choice2",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question2Choice2",
                  "onSelected": {
                    "disable": [
                      "subGroup1Question4",
                    ],
                  },
                  "value": "subGroup1Question2Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question2Choice3",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question2Choice3",
                  "onSelected": {},
                  "value": "subGroup1Question2Choice3",
                },
              ],
              "custom": {
                "title": "subGroup1Question2",
              },
              "defaultAnswer": "subGroup1Question2Choice1",
              "defaultDisabled": false,
              "disabledWhen": undefined,
              "enabledWhen": undefined,
              "id": "subGroup1Question2",
              "type": "choice",
              "validators": [
                "notNullSingle",
              ],
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question3Choice1",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question3Choice1",
                  "onSelected": {},
                  "value": "subGroup1Question3Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question3Choice2",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question3Choice2",
                  "onSelected": {},
                  "value": "subGroup1Question3Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question3Choice3",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question3Choice3",
                  "onSelected": {},
                  "value": "subGroup1Question3Choice3",
                },
              ],
              "custom": {
                "title": "subGroup1Question3",
              },
              "defaultAnswer": [
                "subGroup1Question3Choice1",
                "subGroup1Question3Choice2",
              ],
              "defaultDisabled": true,
              "disabledWhen": undefined,
              "enabledWhen": undefined,
              "id": "subGroup1Question3",
              "type": "choices",
              "validators": [
                "atLeast1",
              ],
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question4Choice1",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question4Choice1",
                  "onSelected": {},
                  "value": "subGroup1Question4Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question4Choice2",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question4Choice2",
                  "onSelected": {},
                  "value": "subGroup1Question4Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question4Choice3",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question4Choice3",
                  "onSelected": {},
                  "value": "subGroup1Question4Choice3",
                },
              ],
              "custom": {
                "title": "subGroup1Question3",
              },
              "defaultAnswer": [
                "subGroup1Question4Choice1",
                "subGroup1Question4Choice2",
              ],
              "defaultDisabled": false,
              "disabledWhen": undefined,
              "enabledWhen": undefined,
              "id": "subGroup1Question4",
              "type": "choices",
              "validators": [
                "atLeast1",
              ],
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question5Choice1",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question5Choice1",
                  "onSelected": {},
                  "value": "subGroup1Question5Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question5Choice2",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question5Choice2",
                  "onSelected": {},
                  "value": "subGroup1Question5Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question5Choice3",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question5Choice3",
                  "onSelected": {},
                  "value": "subGroup1Question5Choice3",
                },
              ],
              "custom": {
                "title": "subGroup1Question5",
              },
              "defaultAnswer": [
                "subGroup1Question5Choice1",
                "subGroup1Question5Choice2",
              ],
              "defaultDisabled": false,
              "disabledWhen": [
                [
                  "subGroup1Question4Choice2",
                ],
                [
                  "subGroup1Question4Choice3",
                ],
              ],
              "enabledWhen": undefined,
              "id": "subGroup1Question5",
              "type": "choices",
              "validators": [
                "atLeast1",
              ],
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question6Choice1",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question6Choice1",
                  "onSelected": {},
                  "value": "subGroup1Question6Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question6Choice2",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question6Choice2",
                  "onSelected": {},
                  "value": "subGroup1Question6Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question6Choice3",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question6Choice3",
                  "onSelected": {},
                  "value": "subGroup1Question6Choice3",
                },
              ],
              "custom": {
                "title": "subGroup1Question6",
              },
              "defaultAnswer": [
                "subGroup1Question6Choice1",
                "subGroup1Question6Choice2",
              ],
              "defaultDisabled": false,
              "disabledWhen": [
                [
                  "subGroup1Question4Choice2",
                  "subGroup1Question4Choice3",
                ],
              ],
              "enabledWhen": undefined,
              "id": "subGroup1Question6",
              "type": "choices",
              "validators": [
                "atLeast1",
              ],
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question7Choice1",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question7Choice1",
                  "onSelected": {},
                  "value": "subGroup1Question7Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question7Choice2",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question7Choice2",
                  "onSelected": {},
                  "value": "subGroup1Question7Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question7Choice3",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question7Choice3",
                  "onSelected": {},
                  "value": "subGroup1Question7Choice3",
                },
              ],
              "custom": {
                "title": "subGroup1Question7",
              },
              "defaultAnswer": [
                "subGroup1Question7Choice1",
                "subGroup1Question7Choice2",
              ],
              "defaultDisabled": true,
              "disabledWhen": undefined,
              "enabledWhen": [
                [
                  "subGroup1Question4Choice2",
                ],
                [
                  "subGroup1Question4Choice3",
                ],
              ],
              "id": "subGroup1Question7",
              "type": "choices",
              "validators": [
                "atLeast1",
              ],
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question8Choice1",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question8Choice1",
                  "onSelected": {},
                  "value": "subGroup1Question8Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question8Choice2",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question8Choice2",
                  "onSelected": {},
                  "value": "subGroup1Question8Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question8Choice3",
                  },
                  "defaultDisabled": false,
                  "disabledWhen": undefined,
                  "enabledWhen": undefined,
                  "id": "subGroup1Question8Choice3",
                  "onSelected": {},
                  "value": "subGroup1Question8Choice3",
                },
              ],
              "custom": {
                "title": "subGroup1Question8",
              },
              "defaultAnswer": [
                "subGroup1Question8Choice1",
                "subGroup1Question8Choice2",
              ],
              "defaultDisabled": true,
              "disabledWhen": undefined,
              "enabledWhen": [
                [
                  "subGroup1Question4Choice2",
                  "subGroup1Question4Choice3",
                ],
              ],
              "id": "subGroup1Question8",
              "type": "choices",
              "validators": [
                "atLeast1",
              ],
            },
          ],
        },
      ],
      "id": "group1",
      "questions": [
        {
          "choices": [],
          "custom": {
            "title": "group1Questions",
          },
          "defaultAnswer": "group1Question1Answer",
          "defaultDisabled": false,
          "disabledWhen": undefined,
          "enabledWhen": undefined,
          "id": "group1Question1",
          "type": "any",
          "validators": [
            "notNull",
          ],
        },
        {
          "choices": [
            {
              "custom": {
                "title": "group1Question2Choice1",
              },
              "defaultDisabled": false,
              "disabledWhen": undefined,
              "enabledWhen": undefined,
              "id": "group1Question2Choice1",
              "onSelected": {},
              "value": "group1Question2Choice1",
            },
            {
              "custom": {
                "title": "group1Question2Choice2",
              },
              "defaultDisabled": false,
              "disabledWhen": undefined,
              "enabledWhen": undefined,
              "id": "group1Question2Choice2",
              "onSelected": {},
              "value": "group1Question2Choice2",
            },
            {
              "custom": {
                "title": "group1Question2Choice3",
              },
              "defaultDisabled": false,
              "disabledWhen": undefined,
              "enabledWhen": undefined,
              "id": "group1Question2Choice3",
              "onSelected": {},
              "value": "group1Question2Choice3",
            },
          ],
          "custom": {
            "title": "group1Question2",
          },
          "defaultAnswer": "group1Question2Choice1",
          "defaultDisabled": false,
          "disabledWhen": undefined,
          "enabledWhen": undefined,
          "id": "group1Question2",
          "type": "choice",
          "validators": [
            "notNullSingle",
          ],
        },
        {
          "choices": [
            {
              "custom": {
                "title": "group1Question3Choice1",
              },
              "defaultDisabled": false,
              "disabledWhen": undefined,
              "enabledWhen": undefined,
              "id": "group1Question3Choice1",
              "onSelected": {},
              "value": "group1Question3Choice1",
            },
            {
              "custom": {
                "title": "group1Question3Choice2",
              },
              "defaultDisabled": false,
              "disabledWhen": undefined,
              "enabledWhen": undefined,
              "id": "group1Question3Choice2",
              "onSelected": {},
              "value": "group1Question3Choice2",
            },
            {
              "custom": {
                "title": "group1Question3Choice3",
              },
              "defaultDisabled": false,
              "disabledWhen": undefined,
              "enabledWhen": undefined,
              "id": "group1Question3Choice3",
              "onSelected": {},
              "value": "group1Question3Choice3",
            },
          ],
          "custom": {
            "title": "group1Question3",
          },
          "defaultAnswer": [
            "group1Question3Choice1",
            "group1Question3Choice2",
          ],
          "defaultDisabled": false,
          "disabledWhen": undefined,
          "enabledWhen": undefined,
          "id": "group1Question3",
          "type": "choices",
          "validators": [],
        },
      ],
    },
  ],
  "questions": [],
}
`;

exports[`Basic With Default Answers getCurrentAnswers 1`] = `
{
  "group1Question1": "group1Question1Answer",
  "group1Question2": "group1Question2Choice1",
  "group1Question3": [
    "group1Question3Choice1",
    "group1Question3Choice2",
  ],
  "subGroup1Question1": "subGroup1Question1Answer",
  "subGroup1Question2": "subGroup1Question2Choice1",
  "subGroup1Question3": [
    "subGroup1Question3Choice1",
    "subGroup1Question3Choice2",
  ],
  "subGroup1Question4": [
    "subGroup1Question4Choice1",
    "subGroup1Question4Choice2",
  ],
  "subGroup1Question5": [],
  "subGroup1Question6": [
    "subGroup1Question6Choice1",
    "subGroup1Question6Choice2",
  ],
  "subGroup1Question7": [
    "subGroup1Question7Choice1",
    "subGroup1Question7Choice2",
  ],
  "subGroup1Question8": [],
}
`;

exports[`Basic With Default Answers getErrors 1`] = `{}`;

exports[`Basic With Default Answers getRenderInstructions 1`] = `
{
  "groups": [
    {
      "custom": undefined,
      "disabled": false,
      "groups": [
        {
          "custom": undefined,
          "disabled": false,
          "groups": [],
          "id": "subGroup1",
          "questions": [
            {
              "choices": [],
              "currentAnswer": "subGroup1Question1Answer",
              "custom": {
                "title": "subGroup1Questions",
              },
              "disabled": false,
              "error": undefined,
              "id": "subGroup1Question1",
              "type": "any",
              "validatedAnswer": "subGroup1Question1Answer",
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question2Choice1",
                  },
                  "disabled": false,
                  "id": "subGroup1Question2Choice1",
                  "value": "subGroup1Question2Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question2Choice2",
                  },
                  "disabled": false,
                  "id": "subGroup1Question2Choice2",
                  "value": "subGroup1Question2Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question2Choice3",
                  },
                  "disabled": false,
                  "id": "subGroup1Question2Choice3",
                  "value": "subGroup1Question2Choice3",
                },
              ],
              "currentAnswer": "subGroup1Question2Choice1",
              "custom": {
                "title": "subGroup1Question2",
              },
              "disabled": false,
              "error": undefined,
              "id": "subGroup1Question2",
              "type": "choice",
              "validatedAnswer": "subGroup1Question2Choice1",
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question3Choice1",
                  },
                  "disabled": false,
                  "id": "subGroup1Question3Choice1",
                  "value": "subGroup1Question3Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question3Choice2",
                  },
                  "disabled": false,
                  "id": "subGroup1Question3Choice2",
                  "value": "subGroup1Question3Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question3Choice3",
                  },
                  "disabled": false,
                  "id": "subGroup1Question3Choice3",
                  "value": "subGroup1Question3Choice3",
                },
              ],
              "currentAnswer": [
                "subGroup1Question3Choice1",
                "subGroup1Question3Choice2",
              ],
              "custom": {
                "title": "subGroup1Question3",
              },
              "disabled": false,
              "error": undefined,
              "id": "subGroup1Question3",
              "type": "choices",
              "validatedAnswer": [
                "subGroup1Question3Choice1",
                "subGroup1Question3Choice2",
              ],
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question4Choice1",
                  },
                  "disabled": false,
                  "id": "subGroup1Question4Choice1",
                  "value": "subGroup1Question4Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question4Choice2",
                  },
                  "disabled": false,
                  "id": "subGroup1Question4Choice2",
                  "value": "subGroup1Question4Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question4Choice3",
                  },
                  "disabled": false,
                  "id": "subGroup1Question4Choice3",
                  "value": "subGroup1Question4Choice3",
                },
              ],
              "currentAnswer": [
                "subGroup1Question4Choice1",
                "subGroup1Question4Choice2",
              ],
              "custom": {
                "title": "subGroup1Question3",
              },
              "disabled": false,
              "error": undefined,
              "id": "subGroup1Question4",
              "type": "choices",
              "validatedAnswer": [
                "subGroup1Question4Choice1",
                "subGroup1Question4Choice2",
              ],
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question5Choice1",
                  },
                  "disabled": true,
                  "id": "subGroup1Question5Choice1",
                  "value": "subGroup1Question5Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question5Choice2",
                  },
                  "disabled": true,
                  "id": "subGroup1Question5Choice2",
                  "value": "subGroup1Question5Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question5Choice3",
                  },
                  "disabled": true,
                  "id": "subGroup1Question5Choice3",
                  "value": "subGroup1Question5Choice3",
                },
              ],
              "currentAnswer": [],
              "custom": {
                "title": "subGroup1Question5",
              },
              "disabled": true,
              "error": "Please select at least 1 option.",
              "id": "subGroup1Question5",
              "type": "choices",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question6Choice1",
                  },
                  "disabled": false,
                  "id": "subGroup1Question6Choice1",
                  "value": "subGroup1Question6Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question6Choice2",
                  },
                  "disabled": false,
                  "id": "subGroup1Question6Choice2",
                  "value": "subGroup1Question6Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question6Choice3",
                  },
                  "disabled": false,
                  "id": "subGroup1Question6Choice3",
                  "value": "subGroup1Question6Choice3",
                },
              ],
              "currentAnswer": [
                "subGroup1Question6Choice1",
                "subGroup1Question6Choice2",
              ],
              "custom": {
                "title": "subGroup1Question6",
              },
              "disabled": false,
              "error": undefined,
              "id": "subGroup1Question6",
              "type": "choices",
              "validatedAnswer": [
                "subGroup1Question6Choice1",
                "subGroup1Question6Choice2",
              ],
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question7Choice1",
                  },
                  "disabled": false,
                  "id": "subGroup1Question7Choice1",
                  "value": "subGroup1Question7Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question7Choice2",
                  },
                  "disabled": false,
                  "id": "subGroup1Question7Choice2",
                  "value": "subGroup1Question7Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question7Choice3",
                  },
                  "disabled": false,
                  "id": "subGroup1Question7Choice3",
                  "value": "subGroup1Question7Choice3",
                },
              ],
              "currentAnswer": [
                "subGroup1Question7Choice1",
                "subGroup1Question7Choice2",
              ],
              "custom": {
                "title": "subGroup1Question7",
              },
              "disabled": false,
              "error": undefined,
              "id": "subGroup1Question7",
              "type": "choices",
              "validatedAnswer": [
                "subGroup1Question7Choice1",
                "subGroup1Question7Choice2",
              ],
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question8Choice1",
                  },
                  "disabled": true,
                  "id": "subGroup1Question8Choice1",
                  "value": "subGroup1Question8Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question8Choice2",
                  },
                  "disabled": true,
                  "id": "subGroup1Question8Choice2",
                  "value": "subGroup1Question8Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question8Choice3",
                  },
                  "disabled": true,
                  "id": "subGroup1Question8Choice3",
                  "value": "subGroup1Question8Choice3",
                },
              ],
              "currentAnswer": [],
              "custom": {
                "title": "subGroup1Question8",
              },
              "disabled": true,
              "error": "Please select at least 1 option.",
              "id": "subGroup1Question8",
              "type": "choices",
              "validatedAnswer": undefined,
              "validating": false,
            },
          ],
          "validating": false,
        },
      ],
      "id": "group1",
      "questions": [
        {
          "choices": [],
          "currentAnswer": "group1Question1Answer",
          "custom": {
            "title": "group1Questions",
          },
          "disabled": false,
          "error": undefined,
          "id": "group1Question1",
          "type": "any",
          "validatedAnswer": "group1Question1Answer",
          "validating": false,
        },
        {
          "choices": [
            {
              "custom": {
                "title": "group1Question2Choice1",
              },
              "disabled": false,
              "id": "group1Question2Choice1",
              "value": "group1Question2Choice1",
            },
            {
              "custom": {
                "title": "group1Question2Choice2",
              },
              "disabled": false,
              "id": "group1Question2Choice2",
              "value": "group1Question2Choice2",
            },
            {
              "custom": {
                "title": "group1Question2Choice3",
              },
              "disabled": false,
              "id": "group1Question2Choice3",
              "value": "group1Question2Choice3",
            },
          ],
          "currentAnswer": "group1Question2Choice1",
          "custom": {
            "title": "group1Question2",
          },
          "disabled": false,
          "error": undefined,
          "id": "group1Question2",
          "type": "choice",
          "validatedAnswer": "group1Question2Choice1",
          "validating": false,
        },
        {
          "choices": [
            {
              "custom": {
                "title": "group1Question3Choice1",
              },
              "disabled": false,
              "id": "group1Question3Choice1",
              "value": "group1Question3Choice1",
            },
            {
              "custom": {
                "title": "group1Question3Choice2",
              },
              "disabled": false,
              "id": "group1Question3Choice2",
              "value": "group1Question3Choice2",
            },
            {
              "custom": {
                "title": "group1Question3Choice3",
              },
              "disabled": false,
              "id": "group1Question3Choice3",
              "value": "group1Question3Choice3",
            },
          ],
          "currentAnswer": [
            "group1Question3Choice1",
            "group1Question3Choice2",
          ],
          "custom": {
            "title": "group1Question3",
          },
          "disabled": false,
          "error": undefined,
          "id": "group1Question3",
          "type": "choices",
          "validatedAnswer": [
            "group1Question3Choice1",
            "group1Question3Choice2",
          ],
          "validating": false,
        },
      ],
      "validating": false,
    },
  ],
  "questions": [],
  "validating": false,
}
`;

exports[`Basic With Default Answers getValidatedAnswers 1`] = `
{
  "group1Question1": "group1Question1Answer",
  "group1Question2": "group1Question2Choice1",
  "group1Question3": [
    "group1Question3Choice1",
    "group1Question3Choice2",
  ],
  "subGroup1Question1": "subGroup1Question1Answer",
  "subGroup1Question2": "subGroup1Question2Choice1",
  "subGroup1Question3": [
    "subGroup1Question3Choice1",
    "subGroup1Question3Choice2",
  ],
  "subGroup1Question4": [
    "subGroup1Question4Choice1",
    "subGroup1Question4Choice2",
  ],
  "subGroup1Question6": [
    "subGroup1Question6Choice1",
    "subGroup1Question6Choice2",
  ],
  "subGroup1Question7": [
    "subGroup1Question7Choice1",
    "subGroup1Question7Choice2",
  ],
}
`;
